--- a/_posts/2020-11-08-xss-labs.md
+++ b/_posts/2020-11-08-xss-labs.md
@@ -27,11 +27,11 @@ tags:
 - [level 13](#level-13)
 - [level 14](#level-14)
 - [level 15](#level-15)
-- [level](#level)
-- [level](#level)
-- [level](#level)
-- [level](#level)
-- [level](#level)
+- [level 16](#level-16)
+- [level 17](#level-17)
+- [level 18](#level-18)
+- [level 19暂无](#level-19%E6%9A%82%E6%97%A0)
+- [level 20暂无](#level-20%E6%9A%82%E6%97%A0)
 
 <!-- /TOC -->
 ***
@@ -773,7 +773,7 @@ payload:
     `?arg01=a&arg02=b" onmouseout=alert(1)//`
 
 ***
-# level 19
+# level 19(暂无)
 * 原理
 
     flash xss
@@ -785,7 +785,7 @@ payload:
 
 
 ***
-# level 
+# level 20(暂无)
 * 原理
 
 
