--- a/_posts/2020-11-15-渗透测试.md
+++ b/_posts/2020-11-15-渗透测试.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      渗透测试思路
 subtitle:   渗透测试基本步骤学习
-date:       2020-11.15
+date:       2020-11-15
 author:     Sprint#51264
 header-img: img/post-bg-universe.jpg
 catalog: true
