--- a/_posts/2020-10-21-sqli-labs21-38.md
+++ b/_posts/2020-10-21-sqli-labs21-38.md
@@ -7,7 +7,7 @@ author:     Sprint#51264
 header-img: img/post-bg-universe.jpg
 catalog: true
 tags:
-    - sqli-labs
+    - SQL注入
 ---
 <!-- TOC -->
 
