--- a/_posts/2020-11-08-xss-labs.md
+++ b/_posts/2020-11-08-xss-labs.md
@@ -7,7 +7,7 @@ author:     Sprint#51264
 header-img: img/post-bg-universe.jpg
 catalog: true
 tags:
-    - xss-labs
+    - XSS漏洞
 ---
 <!-- TOC -->
 
