--- a/_posts/2020-11-15-渗透测试信息收集(待更新).md
+++ b/_posts/2020-11-15-渗透测试信息收集(待更新).md
@@ -31,7 +31,7 @@ tags:
 
         CDN服务器，分布式的静态缓存子服务器，大大加快访问速度，做交互还是要访问根服务器
 
-        子域名收集
+        子域名收集(公司域名的其他形式，开放了其他服务)
         
         证书查询(MySSL)
     
@@ -56,17 +56,17 @@ tags:
 
 * 黑语法(搜索引擎自带语法)
 
-    site：结果指定域名
+        site：结果指定域名
 
-    intext: 正文中存在关键字
+        intext: 正文中存在关键字
 
-    intitle：标题中存在关键字
+        intitle：标题中存在关键字
 
-    info：一些基本信息
+        info：一些基本信息
 
-    inurl：URL存在关键字的网页
+        inurl：URL存在关键字的网页
 
-    filetype：搜索指定文件类型
+        filetype：搜索指定文件类型
 
 
 
@@ -75,33 +75,35 @@ tags:
 
     - 操作系统
 
-        ping：
+            ping：
 
-        TTL(路由跳数)大于100一般为windows(一般是128)，几十的一般为linux(一般为64)
+            TTL(路由跳数)大于100一般为windows(一般是128)，几十的一般为linux(一般为64)
 
     - 数据库类型
 
-        sqlmap
+            sqlmap
 
-        SQL Server：中型数据库，(DBMS)端口1433，后缀.mdf
+            SQL Server：中型数据库，(DBMS)端口1433，后缀.mdf
 
-        Oracle：大型数据库，默认端口1521
+            Oracle：大型数据库，默认端口1521
 
-        MySQL：小型数据库，大部分是php的页面，端口为3306
+            MySQL：小型数据库，大部分是php的页面，端口为3306
 
     - 端口扫描
 
-        135、137、138、139、445常常爆发漏洞
+            135、137、138、139、445常常爆发漏洞
 
-        22-ssh弱口令
+            22-ssh弱口令
 
-        873-rsync未授权访问漏洞
+            873-rsync未授权访问漏洞
 
-        3306-mysql弱口令
+            3306-mysql弱口令
 
-        6379-redis未授权访问漏洞
+            6379-redis未授权访问漏洞
 
-        nmap，sparta
+            3389-远程服务连接漏洞
+
+            nmap，sparta
 
     nmap两种扫描方法：
 
