--- a/_posts/2021-01-29-信息收集02.md
+++ b/_posts/2021-01-29-信息收集02.md
@@ -10,7 +10,39 @@ tags:
     - 渗透测试
 ---
 
+<!-- TOC -->
 
+- [引言](#%E5%BC%95%E8%A8%80)
+- [分类](#%E5%88%86%E7%B1%BB)
+- [域名信息收集](#%E5%9F%9F%E5%90%8D%E4%BF%A1%E6%81%AF%E6%94%B6%E9%9B%86)
+    - [概念](#%E6%A6%82%E5%BF%B5)
+    - [方式](#%E6%96%B9%E5%BC%8F)
+- [子域名信息收集](#%E5%AD%90%E5%9F%9F%E5%90%8D%E4%BF%A1%E6%81%AF%E6%94%B6%E9%9B%86)
+    - [方法](#%E6%96%B9%E6%B3%95)
+        - [利用搜索引擎](#%E5%88%A9%E7%94%A8%E6%90%9C%E7%B4%A2%E5%BC%95%E6%93%8E)
+        - [利用在线工具](#%E5%88%A9%E7%94%A8%E5%9C%A8%E7%BA%BF%E5%B7%A5%E5%85%B7)
+        - [手动工具枚举](#%E6%89%8B%E5%8A%A8%E5%B7%A5%E5%85%B7%E6%9E%9A%E4%B8%BE)
+- [站点信息收集](#%E7%AB%99%E7%82%B9%E4%BF%A1%E6%81%AF%E6%94%B6%E9%9B%86)
+    - [CMS指纹识别](#cms%E6%8C%87%E7%BA%B9%E8%AF%86%E5%88%AB)
+        - [什么是指纹？](#%E4%BB%80%E4%B9%88%E6%98%AF%E6%8C%87%E7%BA%B9)
+        - [工具](#%E5%B7%A5%E5%85%B7)
+- [敏感目录/文件收集](#%E6%95%8F%E6%84%9F%E7%9B%AE%E5%BD%95%E6%96%87%E4%BB%B6%E6%94%B6%E9%9B%86)
+    - [工具](#%E5%B7%A5%E5%85%B7)
+- [WAF识别](#waf%E8%AF%86%E5%88%AB)
+- [敏感信息泄露](#%E6%95%8F%E6%84%9F%E4%BF%A1%E6%81%AF%E6%B3%84%E9%9C%B2)
+    - [google hacking](#google-hacking)
+    - [github信息泄露](#github%E4%BF%A1%E6%81%AF%E6%B3%84%E9%9C%B2)
+- [服务器信息收集](#%E6%9C%8D%E5%8A%A1%E5%99%A8%E4%BF%A1%E6%81%AF%E6%94%B6%E9%9B%86)
+    - [web服务器指纹识别](#web%E6%9C%8D%E5%8A%A1%E5%99%A8%E6%8C%87%E7%BA%B9%E8%AF%86%E5%88%AB)
+    - [真实IP地址识别](#%E7%9C%9F%E5%AE%9Eip%E5%9C%B0%E5%9D%80%E8%AF%86%E5%88%AB)
+        - [概念](#%E6%A6%82%E5%BF%B5)
+        - [过程](#%E8%BF%87%E7%A8%8B)
+    - [端口信息收集](#%E7%AB%AF%E5%8F%A3%E4%BF%A1%E6%81%AF%E6%94%B6%E9%9B%86)
+        - [手工探测](#%E6%89%8B%E5%B7%A5%E6%8E%A2%E6%B5%8B)
+        - [在线探测](#%E5%9C%A8%E7%BA%BF%E6%8E%A2%E6%B5%8B)
+- [存疑](#%E5%AD%98%E7%96%91)
+
+<!-- /TOC -->
 
 # 引言
 
